ci: create a new job for welcome workflow

--- a/.github/workflows/3-add-actions.yml
+++ b/.github/workflows/3-add-actions.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Check workflow contents, steps
         run: ./.github/script/check-file.sh
         env:
-          FILE: ".github/workflows/welcome.yml"
+          FILE: ".github/workflows/welcome.yaml"
           SEARCH: "steps:"
 
       # Update README to close <details id=3> and open <details id=4>
