--- a/.github/workflows/2-add-a-job.yml
+++ b/.github/workflows/2-add-a-job.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Check workflow contents, jobs
         run: ./.github/script/check-file.sh
         env:
-          FILE: ".github/workflows/welcome.yml"
+          FILE: ".github/workflows/welcome.yaml"
           SEARCH: "jobs:"
 
       # Update README to close <details id=2> and open <details id=3>
